Rename the npm package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "website",
+  "name": "motheronthepea.be",
   "version": "1.0.0",
   "description": "Website of Mother on the Pea",
   "main": "index.js",
