--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Website of Mother on the Pea",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "http-server -c-1"
   },
   "repository": {
     "type": "git",
@@ -13,9 +14,6 @@
   "author": "Thierry de Pauw",
   "license": "UNLICENSED",
   "homepage": "https://bitbucket.org/motheronthepea/website#readme",
-  "scripts": {
-    "start": "http-server -c-1"
-  },
   "devDependencies": {
     "http-server": "^0.12.1"
   }
